syntax = "proto3";

package paymentpb;

option go_package = "retarget/pkg/proto/payment;paymentpb";

message PaymentRequest {
  int32 from_user_id = 1;
  int32 to_user_id = 2;
  string amount = 3;
}

message PaymentResponse {
  string transaction_id = 1;
  string status = 2;
}

message Empty {}

service PaymentService {
  rpc RegUserActivity(PaymentRequest) returns (PaymentResponse);
  // rpc GetPaymentStatus(Empty) returns (PaymentResponse);
}